Prevent scrollbar on header when dropping pennant

--- a/css/newsclip.css
+++ b/css/newsclip.css
@@ -19,7 +19,7 @@ body {
     box-shadow: 0 2px 9px 0 rgba(0, 0, 0, 0.4);
     padding: 10px;
     margin: auto;
-    overflow: auto;
+    overflow: hidden;
     text-align: center;
 }
 
